--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ include_directories(
     ${ATOM_SOURCE_DIR}/include
     ${IMGUI_SOURCE_DIR}/include
 )
-file(GLOB_RECURSE SRC "${ATOM_SOURCE_DIR}/src/*.cpp" "${IMGUI_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE SRC "${ATOM_SOURCE_DIR}/src/*.cpp" "${ATOM_SOURCE_DIR}/include/*.h" "${IMGUI_SOURCE_DIR}/src/*.cpp")
 
 message(STATUS "Add source files:")
 foreach(SRC_FILE IN LISTS SRC)
